--- a/config/locales/i18n.yml
+++ b/config/locales/i18n.yml
@@ -1,4 +1,4 @@
-en: &en
+th: &en
   language_en: English
   language_en-US: English (US)
   language_en-GB: English (UK)
@@ -5840,93 +5840,93 @@ ko:
   please_reply_to_this_email_if_you_didnt_request_this: 요청하지 않았다면 이 이메일에 회신하세요.
 
 th:
-  require_phone_2fa_to_open: 電話による2段階認証が必要です
-  the_sender_has_requested_a_two_factor_authentication_via_one_time_password_sent_to_your_html: 送信者は、<b>%{phone}</b> に送信されたワンタイムパスワードによる2段階認証を要求しました。
-  send_verification_code: 認証コードを送信
-  code_has_been_resent: コードが再送信されました
-  invalid_code: 無効なコードです
-  awaiting_completion_by_the_other_party: 他の当事者による完了を待機中
-  view: 表示
-  hi_there: こんにちは
-  download: ダウンロード
-  decline: 辞退
-  declined: 辞退済み
-  decline_reason: 辞退の理由
-  provide_a_reason: 理由を入力してください
-  notify_the_sender_with_the_reason_you_declined: 辞退理由を送信者に通知してください
-  form_has_been_declined_on_html: '<span class="font-semibold">%{time}</span> にフォームが辞退されました'
-  name_declined_by_submitter: '"%{name}" は %{submitter} により辞退されました'
-  name_declined_by_submitter_with_the_following_reason: '"%{name}" は %{submitter} により次の理由で辞退されました:'
-  email: メール
-  digitally_signed_by: 電子署名者
-  role: 役割
-  provide_your_email_to_start: 開始するにはメールアドレスを入力してください
-  provide_your_email: メールアドレスを入力してください
-  provide_your_name_to_start: 開始するには名前を入力してください
-  provide_your_name: 名前を入力してください
-  provide_your_phone_in_international_format_to_start: 開始するには国際形式の電話番号を入力してください
-  provide_your_phone_in_international_format: 国際形式の電話番号を入力してください
-  use_international_format_1xxx_: '国際形式を使用してください：+1xxx...'
-  start: 開始
-  reason: 理由
-  starting: 開始中
-  form_expired_at_html: '<span class="font-semibold">%{time}</span> にフォームの有効期限が切れました'
-  invited_by_html: '<span class="font-semibold">%{name}</span> により招待されました'
-  you_have_been_invited_to_submit_a_form: フォームの提出に招待されました
-  verification_code_code: '認証コード: %{code}'
-  signed_on_time: '%{time} に署名済み'
-  completed_on_time: '%{time} に完了'
-  document_has_been_signed_already: ドキュメントはすでに署名されています
-  form_has_been_submitted_already: フォームはすでに送信されています
-  send_copy_to_email: メールにコピーを送信
-  sending: 送信中
-  resubmit: 再送信
-  form_has_been_deleted_by_html: '<span class="font-semibold">%{name}</span> によりフォームが削除されました。'
-  or: または
-  download_documents: ドキュメントをダウンロード
-  downloading: ダウンロード中
-  completed_successfully: 正常に完了しました
-  password: パスワード
+  require_phone_2fa_to_open: ต้องการการยืนยันตัวตนสองชั้นผ่านโทรศัพท์
+  the_sender_has_requested_a_two_factor_authentication_via_one_time_password_sent_to_your_html: ผู้ส่งได้ขอให้ยืนยันตัวตนสองชั้นผ่านรหัสผ่านใช้ครั้งเดียวที่ส่งไปยัง <b>%{phone}</b>
+  send_verification_code: ส่งรหัสยืนยัน
+  code_has_been_resent: รหัสถูกส่งใหม่แล้ว
+  invalid_code: รหัสไม่ถูกต้อง
+  awaiting_completion_by_the_other_party: รอการดำเนินการจากอีกฝ่าย
+  view: ดู
+  hi_there: สวัสดี
+  download: ดาวน์โหลด
+  decline: ปฏิเสธ
+  declined: ถูกปฏิเสธ
+  decline_reason: เหตุผลในการปฏิเสธ
+  provide_a_reason: กรุณาระบุเหตุผล
+  notify_the_sender_with_the_reason_you_declined: แจ้งผู้ส่งด้วยเหตุผลที่คุณปฏิเสธ
+  form_has_been_declined_on_html: '<span class="font-semibold">%{time}</span> แบบฟอร์มถูกปฏิเสธแล้ว'
+  name_declined_by_submitter: '"%{name}" ถูกปฏิเสธโดย %{submitter}'
+  name_declined_by_submitter_with_the_following_reason: '"%{name}" ถูกปฏิเสธโดย %{submitter} ด้วยเหตุผลดังนี้:'
+  email: อีเมล
+  digitally_signed_by: ลายเซ็นดิจิทัลโดย
+  role: บทบาท
+  provide_your_email_to_start: กรุณากรอกอีเมลเพื่อเริ่มต้น
+  provide_your_email: กรุณากรอกอีเมลของคุณ
+  provide_your_name_to_start: กรุณากรอกชื่อเพื่อเริ่มต้น
+  provide_your_name: กรุณากรอกชื่อของคุณ
+  provide_your_phone_in_international_format_to_start: กรุณากรอกหมายเลขโทรศัพท์ในรูปแบบสากลเพื่อเริ่มต้น
+  provide_your_phone_in_international_format: กรุณากรอกหมายเลขโทรศัพท์ในรูปแบบสากล
+  use_international_format_1xxx_: 'ใช้รูปแบบสากล: +1xxx...'
+  start: เริ่มต้น
+  reason: เหตุผล
+  starting: กำลังเริ่มต้น
+  form_expired_at_html: '<span class="font-semibold">%{time}</span> แบบฟอร์มหมดอายุแล้ว'
+  invited_by_html: 'ได้รับเชิญโดย <span class="font-semibold">%{name}</span>'
+  you_have_been_invited_to_submit_a_form: คุณได้รับเชิญให้ส่งแบบฟอร์ม
+  verification_code_code: 'รหัสยืนยัน: %{code}'
+  signed_on_time: ลงชื่อเมื่อ %{time}
+  completed_on_time: เสร็จสิ้นเมื่อ %{time}
+  document_has_been_signed_already: เอกสารถูกลงชื่อแล้ว
+  form_has_been_submitted_already: แบบฟอร์มถูกส่งแล้ว
+  send_copy_to_email: ส่งสำเนาไปยังอีเมล
+  sending: กำลังส่ง
+  resubmit: ส่งใหม่
+  form_has_been_deleted_by_html: 'แบบฟอร์มถูกลบโดย <span class="font-semibold">%{name}</span>'
+  or: หรือ
+  download_documents: ดาวน์โหลดเอกสาร
+  downloading: กำลังดาวน์โหลด
+  completed_successfully: สำเร็จเรียบร้อย
+  password: รหัสผ่าน
   sign_in: เข้าสู่ระบบ
   signing_in: กำลังเข้าสู่ระบบ
-  sign_in_with_microsoft: Microsoftでサインイン
-  sign_in_with_google: Googleでサインイン
-  forgot_your_password_: パスワードをお忘れですか？
-  create_free_account: 無料アカウントを作成
-  already_have_an_account: すでにアカウントをお持ちですか？
-  first_name: 名
-  last_name: 姓
-  sign_up: 登録
-  signing_up: 登録中
-  profile_details: プロフィールの詳細
-  sign_up_with_google: Googleで登録
-  sign_up_with_microsoft: Microsoftで登録
-  by_creating_an_account_you_agree_to_our_html: '<a target="_blank" href="https://www.docuseal.com/privacy">プライバシーポリシー</a>および<a target="_blank" href="https://www.docuseal.com/terms">利用規約</a>に同意の上、アカウントを作成します。'
-  enter_email_to_continue: 続行するにはメールを入力してください
-  the_code_has_been_sent_to_your_email: コードがあなたのメールに送信されました
-  enter_the_verification_code_from_your_email: メールに記載された認証コードを入力してください
-  too_many_attempts: 試行回数が多すぎます
-  verification_code: 認証コード
-  resend_code: コードを再送信
-  powered_by: '提供元：'
-  count_documents_signed_with_html: '<b>%{count}</b> 件のドキュメントが以下で署名されました'
-  open_source_documents_software: 'オープンソースのドキュメントソフトウェア'
-  eu_data_residency: 'EU データ居住'
-  please_enter_your_email_address_associated_with_the_completed_submission: '完了した提出に関連付けられたメールアドレスを入力してください。'
-  privacy_policy: プライバシーポリシー
-  esignature_disclosure: 電子署名に関する開示
-  select_data_residency: データ保存場所を選択
-  company_name: 会社名
-  optional: 任意
-  submit: 送信
-  sms_rate_limit_exceeded: SMSの送信制限を超えました
-  invalid_phone_number: 無効な電話番号です
-  please_contact_the_requester_to_specify_your_phone_number_for_two_factor_authentication: 二要素認証のため、リクエスターに電話番号を指定してください。
-  we_sent_a_one_time_verification_code_to_your_email_address_please_enter_the_code_below_to_continue: ワンタイム認証コードをメールアドレスに送信しました。続行するには、以下にコードを入力してください。
-  re_send_code: コードを再送信
-  email_verification: メール認証
-  your_verification_code_to_access_the_name: '"%{name}"へのアクセスコード：'
-  please_reply_to_this_email_if_you_didnt_request_this: このリクエストを行っていない場合は、このメールに返信してください。
+  sign_in_with_microsoft: ลงชื่อเข้าใช้ด้วย Microsoft
+  sign_in_with_google: ลงชื่อเข้าใช้ด้วย Google
+  forgot_your_password_: ลืมรหัสผ่านหรือไม่?
+  create_free_account: สร้างบัญชีฟรี
+  already_have_an_account: มีบัญชีแล้วหรือ?
+  first_name: ชื่อ
+  last_name: นามสกุล
+  sign_up: สมัครสมาชิก
+  signing_up: กำลังสมัครสมาชิก
+  profile_details: รายละเอียดโปรไฟล์
+  sign_up_with_google: สมัครสมาชิกด้วย Google
+  sign_up_with_microsoft: สมัครสมาชิกด้วย Microsoft
+  by_creating_an_account_you_agree_to_our_html: '<a target="_blank" href="https://www.docuseal.com/privacy">นโยบายความเป็นส่วนตัว</a> และ <a target="_blank" href="https://www.docuseal.com/terms">ข้อกำหนดการใช้งาน</a> โดยการสร้างบัญชี'
+  enter_email_to_continue: กรอกอีเมลเพื่อดำเนินการต่อ
+  the_code_has_been_sent_to_your_email: รหัสถูกส่งไปยังอีเมลของคุณแล้ว
+  enter_the_verification_code_from_your_email: กรุณากรอกรหัสยืนยันจากอีเมลของคุณ
+  too_many_attempts: พยายามมากเกินไป
+  verification_code: รหัสยืนยัน
+  resend_code: ส่งรหัสใหม่
+  powered_by: 'ขับเคลื่อนโดย:'
+  count_documents_signed_with_html: '<b>%{count}</b> เอกสารถูกลงชื่อโดย'
+  open_source_documents_software: 'ซอฟต์แวร์เอกสารโอเพนซอร์ส'
+  eu_data_residency: 'ที่เก็บข้อมูลในสหภาพยุโรป'
+  please_enter_your_email_address_associated_with_the_completed_submission: 'กรุณากรอกอีเมลที่เกี่ยวข้องกับการส่งที่เสร็จสมบูรณ์'
+  privacy_policy: นโยบายความเป็นส่วนตัว
+  esignature_disclosure: การเปิดเผยข้อมูลลายเซ็นอิเล็กทรอนิกส์
+  select_data_residency: เลือกสถานที่เก็บข้อมูล
+  company_name: ชื่อบริษัท
+  optional: ไม่จำเป็นต้องกรอก
+  submit: ส่ง
+  sms_rate_limit_exceeded: เกินขีดจำกัดการส่ง SMS
+  invalid_phone_number: หมายเลขโทรศัพท์ไม่ถูกต้อง
+  please_contact_the_requester_to_specify_your_phone_number_for_two_factor_authentication: กรุณาติดต่อผู้ร้องขอเพื่อระบุหมายเลขโทรศัพท์สำหรับการยืนยันสองขั้นตอน
+  we_sent_a_one_time_verification_code_to_your_email_address_please_enter_the_code_below_to_continue: เราได้ส่งรหัสยืนยันครั้งเดียวไปยังอีเมลของคุณ กรุณากรอกรหัสด้านล่างเพื่อดำเนินการต่อ
+  re_send_code: ส่งรหัสใหม่
+  email_verification: ยืนยันอีเมล
+  your_verification_code_to_access_the_name: 'รหัสยืนยันของคุณเพื่อเข้าถึง "%{name}":'
+  please_reply_to_this_email_if_you_didnt_request_this: หากคุณไม่ได้ร้องขอนี้ กรุณาตอบกลับอีเมลนี้
 
 
 
